# benamou-dynamo-site

./: README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
.github/workflows/: ci.yml
Noah-s-Ark-main/: .gitignore  Cargo.toml
Noah-s-Ark-main/crates/cli-tools/: Cargo.toml
Noah-s-Ark-main/crates/export/src/: lib.rs
Noah-s-Ark-main/crates/genealogy-core/src/: consanguinity.rs
Noah-s-Ark-main/crates/plugins/src/: lib.rs
Noah-s-Ark-main/crates/server/: Cargo.toml
Noah-s-Ark-main/crates/sosa/: Cargo.toml
Noah-s-Ark-main/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
Noah-s-Ark-main/frontend/src/: App.js  App.tsx  styles.css
Noah-s-Ark-main/frontend/src/components/: PersonSearch.js  PersonSearch.tsx  RelationshipInspector.js  RelationshipInspector.tsx
Noah-s-Ark-main/frontend/src/lib/: graphqlClient.js
Noah-s-Ark-main/frontend/src/types/: graphql.ts
crates/admin-portal/: Cargo.toml
crates/admin-portal/src/: main.rs
crates/cli-tools/src/: main.rs
crates/database/: Cargo.toml
crates/database/migrations/: 001_initial_schema.sql
crates/database/src/: lib.rs
crates/export/: Cargo.toml
crates/gedcom/: Cargo.toml
crates/gedcom/src/: lib.rs
crates/genealogy-core/: Cargo.toml
crates/genealogy-core/src/: lib.rs
crates/genealogy-types/: Cargo.toml
crates/genealogy-types/src/: lib.rs
crates/plugins/: Cargo.toml
crates/server/src/: main.rs
crates/sosa/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
public/: preview.html
src/: App.js  App.tsx  index.css
src/components/: CTAFinal.tsx  ContactForm.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  Method.tsx  PersonDetails.js  PersonDetails.tsx  PersonSearch.js  PersonSearch.tsx  RelationshipInspector.js  RelationshipInspector.tsx  Services.tsx  Testimonials.tsx  WhyBenamou.tsx
src/components/ui/: button.tsx
src/lib/: graphqlClient.ts
src/pages/: Index.tsx
