[workspace]
resolver = "2"
members = [
    "crates/genealogy-types",
    "crates/genealogy-core",
    "crates/sosa",
    "crates/database",
    "crates/gedcom",
    "crates/server",
    "crates/admin-portal",
    "crates/cli-tools",
    "crates/plugins",
    "crates/export",
    "crates/utils",
]

[workspace.dependencies]
anyhow = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
neo4rs = "0.7"
num-bigint = "0.4"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
