[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
genealogy-types = { path = "../genealogy-types" }
neo4rs = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
